force-app/main/default/objects/Action_Service_Plan__c/Action_Service_Plan__c.object-meta.xml
<CustomObject>
    <label>NPS Action Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>