force-app/main/default/objects/Action_Service_Plan__c/fields/AMT_Member__c.field-meta.xml
<CustomField>
    <fullName>AMT_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMT Member</label>
    <referenceTo>ADS__c</referenceTo>
    <relationshipName>Action_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>