force-app/main/default/objects/Action_Service_Plan__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>AMT People/Performance</fullName>
            </value>
            <value>
                <fullName>AMT Process</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Other Deliverables</fullName>
            </value>
            <value>
                <fullName>Product Performance /Improvement</fullName>
            </value>
            <value>
                <fullName>Relationship Development</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Third Party Vendors</fullName>
            </value>
            <value>
                <fullName>Working with UHG Partners</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
                <isActive>false</isActive>
                <label>Communication</label>
            </value>
            <value>
                <fullName>Metrics</fullName>
                <isActive>false</isActive>
                <label>Metrics</label>
            </value>
            <value>
                <fullName>Product and Services</fullName>
                <isActive>false</isActive>
                <label>Product and Services</label>
            </value>
            <value>
                <fullName>Relationship building</fullName>
                <isActive>false</isActive>
                <label>Relationship building</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>