force-app/main/default/objects/Action_Service_Plan__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Action_Service_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>