force-app/main/default/objects/Action_Service_Plan__c/fields/Contact_Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consultant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Consultant Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Action_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>