force-app/main/default/objects/Action_Service_Plan__c/fields/Description_Comments__c.field-meta.xml
<CustomField>
    <fullName>Description_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>