force-app/main/default/objects/Action_Service_Plan__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Action_Service_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>