force-app/main/default/objects/Action_Service_Plan__c/fields/Private_Exchange_Client__c.field-meta.xml
<CustomField>
    <fullName>Private_Exchange_Client__c</fullName>
    <label>Private Exchange Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aon Active Health Exchange</fullName>
            </value>
            <value>
                <fullName>Hanna Global Exchange</fullName>
            </value>
            <value>
                <fullName>Liazon Bright Choices Exchange</fullName>
            </value>
            <value>
                <fullName>Mercer Marketplace</fullName>
            </value>
            <value>
                <fullName>Optum Marketplace</fullName>
            </value>
            <value>
                <fullName>Towers Watson OneExchange</fullName>
            </value>
            <value>
                <fullName>UHC Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>