force-app/main/default/objects/Action_Service_Plan__c/fields/Target_completion__c.field-meta.xml
<CustomField>
    <fullName>Target_completion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target completion</label>
    <type>Date</type>
</CustomField>