force-app/main/default/objects/Action_Service_Plan__c/recordTypes/NPS_Action.recordType-meta.xml
<RecordType>
    <fullName>NPS_Action</fullName>
    <active>true</active>
    <label>NPS Action</label>
</RecordType>