force-app/main/default/objects/Action_Service_Plan__c/listViews/All_NPS_Action_Plans.listView-meta.xml
<ListView>
    <fullName>All_NPS_Action_Plans</fullName>
    <columns>Year__c</columns>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_Completed__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Target_completion__c</columns>
    <columns>Category__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All NPS Action Plans</label>
    <sharedTo>
        <role>CMCSAD</role>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>