force-app/main/default/objects/Action_Service_Plan__c/listViews/Michele_Validations.listView-meta.xml
<ListView>
    <fullName>Michele_Validations</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Year__c</columns>
    <columns>Description_Comments__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>Michele Validations</label>
</ListView>